Fixed default button colour on Safari

--- a/styles/sass/_javascript-classes.scss
+++ b/styles/sass/_javascript-classes.scss
@@ -90,6 +90,7 @@
 
         button {
             background-color: $button-background;
+            color: $primary-font-color;
             border-radius: 6px;
             padding: 3px 6px;
             margin: 3px 0;
